[tool.poetry]
name = "frequency-is-freedom"
version = "0.1.0"
description = "Maps that show how more frequent bus service gives people more freedom of movement"
authors = ["Joe Gambino <joe@gam.bingo>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
requests = "^2.28.1"
python-dotenv = "^0.20.0"
streamlit = "^1.12.2"
numpy = "^1.23.2"
pandas = "^1.4.4"
htbuilder = "^0.6.0"
osmnx = "^1.2.2"
scikit-learn = "^1.1.2"
geopy = "^2.2.0"

[tool.poetry.dev-dependencies]
watchdog = "^2.1.9"
jupyterlab = "^3.4.6"
ipykernel = "^6.15.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
